--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title> 🖥 Elnur's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
   <h3>Education and Courses</h3>
   <ul>
     <li>Udemy online course - The Complete 2021 Web Development Bootcamp</li>
-    <li>Canada college certificate</li>
+    <li>Canadian college certificate</li>
   </ul>
 
   <br>
@@ -63,23 +64,23 @@
   <table>
     <tr>
       <td>
-        <td>HTML</td>
-        <td>⚫⚫⚫⚪⚪</td>
+      <td>HTML</td>
+      <td>⚫⚫⚫⚪⚪</td>
       </td>
       <td>
-        <td>CSS</td>
-        <td>⚫⚫⚪⚪⚪</td>
+      <td>CSS</td>
+      <td>⚫⚫⚪⚪⚪</td>
       </td>
     </tr>
 
     <tr>
       <td>
-        <td>JavaScript</td>
-        <td>⚫⚪⚪⚪⚪</td>
+      <td>JavaScript</td>
+      <td>⚫⚪⚪⚪⚪</td>
       </td>
       <td>
-        <td>PHP</td>
-        <td>⚫⚪⚪⚪⚪</td>
+      <td>PHP</td>
+      <td>⚫⚪⚪⚪⚪</td>
       </td>
     </tr>
 
