--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <td>
         <h1>Elnur Rzayev</h1>
         <p><em>Begginer in <strong>Web Developing</strong> </em></p>
-        <p>I am new in Web Develop ment and hope in future to get more knowledge and experience</p>
+        <p>I am new in Web Development and hope in future to get more knowledge and experience</p>
       </td>
     </tr>
   </table>
@@ -22,8 +22,10 @@
 
   <h3>Education and Courses</h3>
   <ul>
-    <li>Udemy online course - The Complete 2021 Web Development Bootcamp</li>
-    <li>Canadian college certificate</li>
+    <li>Udemy online courses - The Complete 2021 Web Development Bootcamp</li>
+    <li>Udemy online courses - The Complete SQL Bootcamp 2021: Go from Zero to Hero</li>    
+    <li>Udemy online courses - Python for Data Science and Machine Learning Bootcamp</li>
+    
   </ul>
 
   <br>
@@ -79,9 +81,15 @@
       <td>⚫⚪⚪⚪⚪</td>
       </td>
       <td>
-      <td>PHP</td>
+      <td>SQL</td>
       <td>⚫⚪⚪⚪⚪</td>
       </td>
+    </tr>
+    <tr>
+     <td>
+      <td>Python</td>
+      <td>⚫⚪⚪⚪⚪</td>
+     </td>
     </tr>
 
   </table>
