--- a/contacts.html
+++ b/contacts.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Contacts</title>
+    <link rel="stylesheet" href="CSS/styles.css">
   </head>
   <body>
     <h1>My Contact Details</h1>
-    <p>My Address - Azerbaijan, Baku</p>
-    <p>My Mobile - +994 50 225 74 61</p>
-    <p>My Em@il - erzayev87@gmail.com</p>
-
+    <p><b>My Address</b> - Azerbaijan, Baku</p>
+    <p><b>My Mobile</b> - +994 50 225 74 61</p>
+    <p><b>My Em@il</b> - erzayev87@gmail.com</p>
+<br>
+<br>
+    
+    <h2>Or send me an email</h2>
 
     <form class="" action="mailto:info@erzayev87@gmail.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
